src/app/components/lat-long-coordinates/lat-long-coordinates.component.scss
.form-label {
  text-align: center;
}
.form-value {
  color: brown;
}
.form-field {
  padding-right: 5px;
}
.form-group {
  margin: 15px;
}
.coord-label {
  color: blueviolet;
  font-size: x-large;
}
.form-msg {
  color: black;
}
.card-label {
  margin: 50px 50px 50px 50px;
  background-size: contain;
  background-image: url("https://live.staticflickr.com/3342/3577377975_97c3a4934b_b.jpg");
  opacity: 0.9;
}
.card img {
  width: 100%;
  height: auto;
}
.progress-margin {
    margin: 0 100px;
  }

